@@ -1,6 +1,8 @@
 0.5.3
  - fix: check disk usage before compressing data for upload
  - ref: migrate favicon location to AppDataLocation
+ - ref: migrate upload compress cache to CacheLocation
+   (automatically move cached data from old appdirs location)
 0.5.2
  - enh: write the obtained dataset identifier to task files that
    were successfully imported
